Reorganize web docs and complete responsive user view
